--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.3.0
   flutter_riverpod: ^2.6.1
   cached_network_image: ^3.4.1
+  lite_rolling_switch: ^1.0.1
 
 dev_dependencies:
   flutter_test:
